Fix story list wrapping

--- a/src/story-list-view/index.less
+++ b/src/story-list-view/index.less
@@ -71,11 +71,7 @@
 		right: @toolbar-width;
 		min-height: 100%;
 		display: flex;
+		flex-wrap: wrap;
 		.shadow-large;
-
-		> ul {
-			display: flex;
-			flex-wrap: wrap;
-		}
 	}
 }
